--- a/capstone/web/templates/base_generic.html
+++ b/capstone/web/templates/base_generic.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap core CSS -->
 	<link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet" >
 	<!-- Custom styles for this template -->    
-    <link href="https://v4-alpha.getbootstrap.com/examples/cover/cover.css" rel="stylesheet">
+        <link href="https://v4-alpha.getbootstrap.com/examples/cover/cover.css" rel="stylesheet">
 	<!-- Add additional CSS in static file -->
 	{% load static %}
 	<link href="{% static 'css/styles.css' %}" rel="stylesheet">
@@ -20,7 +20,25 @@
 		<div class="site-wrapper-inner">
 			<div class="cover-container">
 				<div class="inner cover">
-				{% block content %}{% endblock %}
+				{% block content %}
+				{% endblock %}
+				{% block pagination %}
+				{% if is_paginated %}
+				<div class="pagination">
+				<span class="page-links">
+					{% if page_obj.has_previous %}
+					<a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+					{% endif %}
+					<span class="page-current">
+					Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+					</span>
+					{% if page_obj.has_next %}
+					<a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+					{% endif %}
+				</span>
+				</div>
+				{% endif %}
+				{% endblock %}
 				</div>
 			</div>
 		</div>
